--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,25 @@
+
+<link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet"> 
+
+
+<style type="text/css">
+  body{
+    background-image: url(https://i.ytimg.com/vi/9sNQFJAb3Ss/maxresdefault.jpg);
+  }
+
+  h2{
+    font-family: Staatliches;
+  }  
+
+  h1{
+     color: grey;
+  font-size: 75px;
+  text-align: center;
+  font-family: Staatliches;
+  }
+</style>
+<h1> Welcome to Phoenix Portal</h1>
+
 <% content_for :devise_form do %>
 
   <h2 class="heading text-4xl font-bold pt-4 mb-8">Sign up</h2>
