--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,8 @@
+
+
+
+
+
 <% content_for :devise_form do %>
   <h2 class="heading text-4xl font-bold pt-4 mb-8">Edit <%= resource_name.to_s.humanize %></h2>
 
@@ -6,7 +11,7 @@
     <%= render "devise/shared/error_messages", resource: resource %>
 
     <div class="mb-6">
-      <%= f.label :username, class:"label" %>
+      <%= f.label :username class:"label" %>
       <%= f.text_field :username, autofocus: true, class:"input" %>
     </div>
 
