--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,82 @@
-<h1 class="semibold text-2xl">Welcome to Kickoff!</h1>
-<p class="lead">Use this starting point as a way to quickly set up a new project by generating files, installing gems, and more.</p>
+
+
+<h1 class="semibold text-6xl">Welcome to Phoenix</h1>
+<link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet"> 
+
+<style type="text/css">
+	
+h1{
+	text-align: center;
+	font-family: Staatliches;
+	font-size: 500x;
+	color: grey;
+	
+}
+
+body{
+	background-image: url(https://i.ytimg.com/vi/9sNQFJAb3Ss/maxresdefault.jpg);
+
+</style>
+
+
+
+<% if user_signed_in? %>
+
+<!DOCTYPE html>
+<html>
+<head>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+
+</head>
+<body>
+
+<style type="text/css">
+	.btns {
+		padding: 75px 120px;
+		text-align: center;
+		text-decoration: none;
+		font-size: 60px;
+	}
+	
+	.first{
+		padding-left: 350px;
+		padding-bottom: 50px;
+	}
+
+	.second{
+		padding-left: 450px;
+	}
+	
+
+
+</style>
+
+
+
+<div class="jumbotron">
+	<div class="first">
+  
+  <button type="button" class="btns btn-secondary">学生</button>
+  <button type="button" class="btns btn-secondary">企業</button>
+  <button type="button" class="btns btn-secondary">JOB</button>
+
+</div>
+
+<div class="second">
+  <button type="button" class="btns btn-secondary">担当者</button>
+  <button type="button" class="btns btn-secondary">売り上げ</button>
+  </div>
+</div>
+
+
+</body>
+</html>
+
+
+
+
+
+    
+<%end%>
+    
